test/scc/decl/semantic-errors/030.t
struct A
{
    int a : 33;
};